[tool.poetry]
name = "pyspark-streaming"
version = "0.1.0"
description = ""
authors = ["ko-da-k <17734711+ko-da-k@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
